test/files/neg/t3098.check
b.scala:3: error: match may not be exhaustive.
It would fail on the following input: (_ : C)
  def f = (null: T) match {
               ^
one error found
